# boxcar

./: Cargo.toml  Dockerfile  README.md
.github/: build-and-publish.yml
boxcar-core/: Cargo.toml
boxcar-core/src/: error.rs  registry.rs  server.rs  tool.rs
boxcar-server/: Cargo.toml
boxcar-server/src/: app.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
mcp-servers/boxcar-github/: Cargo.toml
mcp-servers/boxcar-github/src/: adapter.rs  error.rs  lib.rs  main.rs  mcp.rs
transmission-protocols/boxcar-sse/: Cargo.toml
transmission-protocols/boxcar-stdio/: Cargo.toml
