[package]
name = "boxcar-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "boxcar"
path = "src/main.rs"

[dependencies]
boxcar-core = { path = "../boxcar-core" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
